--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<h1 id="mainHeading" class="text-light d-inline-block">ΑΩ</h1>
 		</div>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
 	</script>
 	<script src="./script.js">
 	</script>
