--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<h1 id="mainHeading" class="text-light d-inline-block">ΑΩ</h1>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
 	</script>
 	<script src="./script.js">
 	</script>
